# webloader

./: CMakeLists.txt  debug_generate_solution_win32.bat  debug_generate_solution_x64.bat  release_generate_solution_win32.bat  release_generate_solution_x64.bat
loader/: CMakeLists.txt
loader/include/: formatter.h  httpclient.h  httpheaders.h  httprequest.h  ihttpclient.h  stdafx.h
loader/src/: httpclient.cpp  main.cpp
